views: remove unnecessary padding in bubbles with title and message

When there is both a title and message, the padding isn't needed, since
it is intended to visually take the place of the message.

Bug: 771515
Change-Id: Ia29be37ae2f2049da254e4ea4874fb28f073961e
Reviewed-on: https://chromium-review.googlesource.com/700400
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#506544}
Former-commit-id: f18dc4824eee4d272ea02011652d4c887f468300