chrome/browser/ui/views/content_setting_bubble_contents.cc
@@ -387,14 +387,14 @@ void ContentSettingBubbleContents::Init() {
   if (!bubble_content.message.empty()) {
     views::Label* message_label = new views::Label(
         bubble_content.message, views::style::CONTEXT_LABEL, STYLE_SECONDARY);
-    // For bubbles without titles there is no need for padding.
-    if (!bubble_content.title.empty() && provider->UseExtraDialogPadding())
-      layout->AddPaddingRow(0, unrelated_control_vertical_spacing);
     message_label->SetMultiLine(true);
     message_label->SetHorizontalAlignment(gfx::ALIGN_LEFT);
     layout->StartRow(0, kSingleColumnSetId);
     layout->AddView(message_label);
     bubble_content_empty = false;
+  } else if (!bubble_content.title.empty() &&
+             provider->UseExtraDialogPadding()) {
+    layout->AddPaddingRow(0, unrelated_control_vertical_spacing);
   }
 
   // Layout for the item list (blocked plugins and popups).
